# safety_monitor_edge

./: .gitignore  Cargo.toml  Folder_Structure.txt  README.md  error.txt
src/: alarm.rs  bot_alert.rs  camera.rs  engine.rs  iot_gpio.rs  main.rs  processing.rs  types.rs  visualizer.rs
tools/: export_model.py  quantize.py  quantize_model.py
