[package]
name = "safety_monitor_edge"
version = "1.0.0"
edition = "2024"

[dependencies]
# 1. Não bộ AI (Đã bỏ copy-tensors theo chuẩn bản 2.0)
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17"

# 2. Mắt (Camera - dùng Media Foundation của Windows)
nokhwa = { version = "0.10", features = ["input-msmf"] }

# 3. Tay (Xử lý ảnh và Vẽ khung)
image = "0.25"
imageproc = "0.25"
rusttype = "0.9" # Để ghi text (tên Class) lên ảnh

# 4. Giao diện (Mở cửa sổ hiển thị)
minifb = "0.25"
crossbeam-channel = "0.5.15"
sysinfo = "0.30"
rayon = "1.10"
fast_image_resize = "2.7"

# IoT & Networking Phase 3
dotenv = "0.15"            # Nạp setting file .env
reqwest = { version = "0.12", features = ["blocking", "multipart", "rustls-tls"], default-features = false }
chrono = "0.4"             # Định dạng lại Local Time cho Telegram Text

[target.'cfg(target_os = "linux")'.dependencies]
sysfs_gpio = "0.6"         # Phóng điện còi vật lý Native Linux (chỉ biên dịch trên HĐH nhúng)

[dependencies.opencv]
version = "0.92"
optional = true

[features]
rtsp = ["opencv"]          # Cờ mở khoá chế độ RTSP Camera H264 Mạng
